@@ -1,8 +1,6 @@
 # Lyocell
 
-**Lyocell** is a high-performance, open-source load testing tool rewritten as a **Java-based clone of k6**. It combines the developer experience of k6's JavaScript API with the massive concurrency of **Java 25 Virtual Threads**.
-
-Running on **GraalVM**, Lyocell compiles to a standalone native binary that starts instantly and simulates thousands of concurrent users with minimal overhead.
+**Lyocell** is a fast, k6-compatible load-testing tool that ships as a single binary. Write familiar k6-style JavaScript, run it locally, and get shareable reports—no servers or heavy setup required.
 
 ## 🚀 Why Lyocell?
 
@@ -13,114 +11,79 @@ Running on **GraalVM**, Lyocell compiles to a standalone native binary that star
 
 ## 📋 Prerequisites
 
-*   **Java 25** (with `--enable-preview`) - Required to build/run from source.
-*   **GraalVM** - Optional, for building the native binary yourself.
+None. The install methods below include a ready-to-run binary.
 
 ## 📦 Installation
 
-<details>
-<summary><strong>macOS</strong> (Homebrew)</summary>
-
-```bash
-brew tap wilhg/lyocell
-brew install lyocell
-```
-</details>
-
-<details>
-<summary><strong>Linux</strong> (Homebrew or Manual)</summary>
-
-**Homebrew:**
+**macOS (Homebrew)**
 ```bash
 brew tap wilhg/lyocell
 brew install lyocell
 ```
 
-**Manual:**
-Download the standalone binary from the [Releases](https://github.com/wilhg/lyocell/releases) page:
-
+**Linux (Homebrew)**
 ```bash
-# Download the latest version
+brew tap wilhg/lyocell
+brew install lyocell
+```
+
+**Linux (Direct download)**
+```bash
 wget https://github.com/wilhg/lyocell/releases/latest/download/lyocell-linux-amd64
-
-# Make it executable
 chmod +x lyocell-linux-amd64
-
-# Move to a directory in your PATH (optional)
-sudo mv lyocell-linux-amd64 /usr/local/bin/lyocell
+sudo mv lyocell-linux-amd64 /usr/local/bin/lyocell   # optional, put on PATH
 ```
-</details>
 
-<details>
-<summary><strong>Windows</strong> (Scoop)</summary>
-
+**Windows (Scoop)**
 ```powershell
 scoop bucket add lyocell https://github.com/wilhg/lyocell-scoop
 scoop install lyocell
 ```
-</details>
 
 ## ⚡ Quick Start
 
-### 1. Build from Source (Optional)
-
-If you prefer to build it yourself:
-
-```bash
-git clone https://github.com/wilhg/lyocell.git
-cd lyocell
-./gradlew build
-```
-
-### 2. Write a Test Script
-
-Create a file named `test.js`:
-
+### 1) Write a test (k6-style JS)
+Save this as `test.js`:
 ```javascript
 import http from 'lyocell/http';
 import { check, sleep } from 'lyocell';
 
 export const options = {
-    thresholds: {
-        'http_req_duration': ['p(95)<500'], // 95% of requests must complete in < 500ms
-    },
+  vus: 20,
+  duration: '30s',
+  thresholds: {
+    http_req_duration: ['p(95)<500'],
+    checks: ['rate>0.99'],
+  },
+  lyocell: {
+    outputs: [{ type: 'html', target: 'report.html' }], // export HTML report
+  },
 };
 
-export default function() {
-    const res = http.get('https://httpbun.com/get');
-    check(res, { 'status is 200': (r) => r.status === 200 });
-    sleep(1);
+export default function () {
+  const res = http.get('https://httpbun.com/get');
+  check(res, { 'status is 200': (r) => r.status === 200 });
+  sleep(1);
 }
 ```
 
-### 3. Run the Test
-
-Run directly with Gradle (developer mode):
-
+### 2) Run it
 ```bash
-./gradlew run --args="test.js -u 10 -i 50"
+lyocell test.js -o html=report.html
 ```
-*   `-u 10`: Simulate 10 concurrent Virtual Users.
-*   `-i 50`: Run 50 total iterations.
+
+### 3) View results
+- Live summary prints to the console.
+- An HTML report is written to `report.html` (open in a browser, no server needed). Great for sharing complex load-test results.
 
 ## 📚 Documentation
 
-*   **[User Guide & API Reference](prompts/K6_REFERENCE.md)**: Detailed API docs for `lyocell/http`, `lyocell/metrics`, and standard modules.
-*   **[Advanced Usage](ADVANCED_USAGE.md)**: Complex scenarios (Ramping VUs), Observability (Prometheus), and Data Seeding.
-*   **[Architecture](prompts/TECHNICAL_DESIGN.md)**: Deep dive into the internal design (Virtual Threads, GraalJS Contexts).
-
-## 🛠️ Building Native Image
-
-To create a standalone binary (Linux/macOS):
-
-```bash
-./gradlew nativeCompile
-```
-The binary will be generated at `build/native/nativeCompile/lyocell`.
+* **User Guide & API Reference**: `prompts/K6_REFERENCE.md`
+* **Advanced Usage** (scenarios, reporting, data seeding): `ADVANCED_USAGE.md`
 
 ## 🤝 Contributing
 
-Contributions are welcome! Please follow our [Test-Driven Development](AGENTS.md) process and ensure all new features are covered by integration tests.
+Contributions are welcome! See `AGENTS.md` for the workflow we follow.
 
 ## 📄 License
 
